# watermelon-db-3

./: WatermelonDB.podspec  package.json
adapters/sqlite/: icuSupport.js  index.js  unicodeHelpers.js
adapters/sqlite/encodeQuery/: index.js
adapters/sqlite/makeDispatcher/: index.native.js
native/android/: build-sqlcipher-icu.sh  build.gradle
native/android-jsi/: build.gradle
native/android-jsi/src/main/cpp/: CMakeLists.txt
native/android/src/main/cpp/: CMakeLists.txt
native/android/src/main/java/com/nozbe/watermelondb/: WMDatabase.java  WMDatabaseBridge.java  WMDatabaseDriver.java
native/shared/: Sqlite.cpp
native/sqlite-cipher-amalgamation/: build.sh  icu_module.c  sqlcipher_icu_amalgamation.c  sqlite3_icu.c  sqlite3_icu_fix.patch  test1.c  test_existing_icu  test_existing_icu.c  test_icu  test_icu_final  test_icu_init.c  test_icu_unit.c  test_main.c
src/adapters/sqlite/: icuSupport.js  index.js  unicodeHelpers.js
src/adapters/sqlite/encodeQuery/: index.js
src/adapters/sqlite/makeDispatcher/: index.native.js
